#include "service_gw2ms.h"

namespace gw2ms
{

    void Gw2msServiceImpl::GwConnectMaster(::google::protobuf::RpcController* controller, 
        const ::gw2ms::ConnectRequest* request, 
        ::google::protobuf::Empty* response, 
        ::google::protobuf::Closure* done)
    {

    }

}//namespace gw2ms
